# stecker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  osc-test.scd
.github/workflows/: build.yml  sc-build.yml  server-build.yml
src/: main.rs
src/client/: Cargo.toml  api.rs  main.rs  models.rs
src/client/signal/: mod.rs
src/sc_plugin/: CMakeLists.txt  CMakePresets.json  Cargo.toml  README.md
src/sc_plugin/src/: SteckerBus.sc  SuperStecker.cpp  SuperStecker.hpp  SuperStecker.sc  lib.rs
src/sc_plugin/src/HelpSource/Classes/: DataSteckerIn.schelp  DataSteckerOut.schelp  Stecker.schelp  SteckerIn.schelp  SteckerOut.schelp
src/sc_plugin/src/HelpSource/Guides/Stecker/: SuperStecker.schelp
src/server/: Cargo.toml  broadcast_room.rs  build.rs  connections.rs  event_service.rs  main.rs  models.rs  osc_listener.rs  schema.rs  state.rs  views.rs
src/server/models/: audio_broadcast_room.rs  data_broadcast_room.rs  dispatcher.rs  mod.rs  room.rs
src/server/static/: stecker.js  style.css
src/server/templates/: audio.html  base.html.jinja  debug.html.jinja  dispatcher.html  dispatcher_no_room_available.html.jinja  dispatcher_not_found.html.jinja  home.html.jinja  index.html  stecker.js  stream.html  stream.html.jinja
src/server/tools/: load_test.py
src/shared/: Cargo.toml
src/shared/src/: api.rs  connections.rs  event_service.rs  lib.rs  models.rs  utils.rs
