[package]
name = "stecker"
version = "0.1.0"
edition = "2021"

[dependencies]
webrtc = "0.10.1"
tokio = {version = "1.36.0", features = ["full"] }
axum = "0.7.4"
serde = "1.0.197"
async-graphql = "7.0.2"
async-graphql-axum = "7.0.2"
uuid = "1.3.1"
anyhow = "1.0.82"
serde_json = "1.0.116"
base64 = "0.22.0"
# juniper = "0.15.10"
# actix-web = {version = "4.5.0"}
# actix-web-lab = {version = "0.20.2" }
# actix-cors = "0.6.0"
# env_logger = "0.11.3"
# env_logger = "0.11.2"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
