[package]
name = "stecker_client"
edition = "2021"
version = "0.1.0"

[dependencies]
shared = { path = "../shared" }
reqwest = { version = "0.12.5", features = ["json"] }
webrtc = "0.10.1"
tokio = { version = "1.36.0", features = ["full"] }
serde = "1.0.197"
uuid = "1.3.1"
anyhow = "1.0.82"
serde_json = "1.0.116"
base64 = "0.22.0"

[[bin]]
name = "client"
path = "./main.rs"
