[package]
name = "stecker_client"
edition = "2021"
version = "0.1.0"

[dependencies]
shared = { path = "../shared" }
webrtc = "0.10.1"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.82"
clap = { version = "4.5.7", features = ["derive"] }

[[bin]]
name = "client"
path = "./main.rs"
