[package]
name = "stecker_server"
edition = "2021"
version = "0.1.0"

[dependencies]
shared = { path = "../shared" }
webrtc = "0.10.1"
tokio = { version = "1.38.1", features = ["full"] }
axum = "0.7.4"
serde = "1.0.197"
async-graphql = "7.0.2"
async-graphql-axum = "7.0.2"
uuid = "1.3.1"
anyhow = "1.0.82"
serde_json = "1.0.116"
base64 = "0.22.0"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }

[[bin]]
name = "server"
path = "./main.rs"
