[package]
name = "stecker_server"
edition = "2021"
version = "0.1.0"

[dependencies]
shared = { path = "../shared" }
webrtc = "0.10.1"
tokio = { version = "1.38.1", features = ["full"] }
axum = "0.7.4"
serde = "1.0.197"
async-graphql = { version = "7.0.2", features = ["tracing"] }
async-graphql-axum = "7.0.2"
uuid = "1.3.1"
anyhow = "1.0.82"
serde_json = "1.0.116"
base64 = "0.22.0"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
clap = { version = "4.5.13", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = {version="0.3.18", features = ["default", "std"]}
rand = {version = "0.8.0", features = ["std_rng"]}
regex = "1.11.1"
datetime = "0.5.2"
futures = "0.3.31"
minijinja = { version = "2.12.0", features = ["loader"] }

[[bin]]
name = "server"
path = "./main.rs"
